--- a/src/modules/Data.Cache.Memcached/Data.Cache.Memcached.csproj
+++ b/src/modules/Data.Cache.Memcached/Data.Cache.Memcached.csproj
@@ -2,7 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFramework>netcoreapp2.1</TargetFramework>
-        <PackageVersion>1.0.1</PackageVersion>
+        <PackageVersion>1.1.0</PackageVersion>
         <PackageId>app.core.Extensions.Data.Cache.Memcached</PackageId>
         <AssemblyName>app.core.Extensions.Data.Cache.Memcached</AssemblyName>
         <RootNamespace>core.Extensions.Data.Cache.Memcached</RootNamespace>
@@ -12,7 +12,7 @@
         </Description>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
         <PackageReleaseNotes>First release</PackageReleaseNotes>
-        <PackageTags>Memcached</PackageTags>
+        <PackageTags>add ISet Keys</PackageTags>
     </PropertyGroup>
     <ItemGroup>
         <ProjectReference Include="..\Data.Cache\Data.Cache.csproj" />
