--- a/src/modules/Spa/Spa.csproj
+++ b/src/modules/Spa/Spa.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup> 
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <PackageVersion>1.0.4</PackageVersion> 
+    <PackageVersion>1.0.5</PackageVersion> 
     <PackageId>app.core.Extensions.Spa</PackageId>
     <AssemblyName>app.core.Extensions.Spa</AssemblyName> 
     <RootNamespace>core.Extensions.Spa</RootNamespace>
@@ -10,7 +10,7 @@
     <Copyright>© Massimo Di Paolo. All rights reserved.</Copyright>
     <Description></Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <PackageReleaseNotes>Execute order</PackageReleaseNotes>
+    <PackageReleaseNotes>Is cacheble options / check</PackageReleaseNotes>
     <PackageTags>spa, single page application</PackageTags>
   </PropertyGroup>  
 
