--- a/src/modules/Cors/Cors.csproj
+++ b/src/modules/Cors/Cors.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   
 	<PropertyGroup>
-		<TargetFramework>netcoreapp2.1</TargetFramework>
-		<PackageVersion>1.0.1</PackageVersion>
+		<TargetFramework>netcoreapp2.2</TargetFramework>
+		<PackageVersion>1.0.2</PackageVersion>
 		<PackageId>app.core.Extensions.Cors</PackageId>
 		<AssemblyName>app.core.Extensions.Cors</AssemblyName>
 		<RootNamespace>core.Extensions.Cors</RootNamespace>
@@ -10,9 +10,13 @@
     <Copyright>© Massimo Di Paolo. All rights reserved.</Copyright>
     <Description></Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <PackageReleaseNotes>First release</PackageReleaseNotes>    
+    <PackageReleaseNotes>.net core 2.2</PackageReleaseNotes>    
     <PackageTags>cors, cors policies</PackageTags>
-  </PropertyGroup>   
+  </PropertyGroup>
+  
+	<ItemGroup>
+	  <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
+	</ItemGroup>   
 
   <ItemGroup>
     <ProjectReference Include="..\ExtensionBase\ExtensionBase.csproj" />
