--- a/src/modules/Data.Mongo/Data.Mongo.csproj
+++ b/src/modules/Data.Mongo/Data.Mongo.csproj
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFramework>netcoreapp2.1</TargetFramework>
-		<PackageVersion>1.0.3</PackageVersion>
+		<TargetFramework>netcoreapp2.2</TargetFramework>
+		<PackageVersion>1.0.4</PackageVersion>
 		<PackageId>app.core.Extensions.Data.Mongo</PackageId>
 		<AssemblyName>app.core.Extensions.Data.Mongo</AssemblyName>
 		<RootNamespace>core.Extensions.Data.Mongo</RootNamespace>
@@ -10,11 +10,11 @@
     <Copyright>© Massimo Di Paolo. All rights reserved.</Copyright>
     <Description></Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <PackageReleaseNotes>.net core 2.1; Merge / Query</PackageReleaseNotes>
+    <PackageReleaseNotes>.net core 2.2</PackageReleaseNotes>
     <PackageTags></PackageTags>
   </PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="MongoDB.Driver" Version="2.7.0" />
+		<PackageReference Include="MongoDB.Driver" Version="2.7.2" />
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\Data\Data.csproj" />
