--- a/src/modules/Data/Data.csproj
+++ b/src/modules/Data/Data.csproj
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 
 <Project Sdk="Microsoft.NET.Sdk">
-	<PropertyGroup>
-		<TargetFramework>netcoreapp2.1</TargetFramework>
-		<PackageVersion>1.0.4</PackageVersion>
+	<PropertyGroup>  
+		<TargetFramework>netcoreapp2.2</TargetFramework>
+		<PackageVersion>1.0.5</PackageVersion>
 		<PackageId>app.core.Extensions.Data</PackageId>
 		<AssemblyName>app.core.Extensions.Data</AssemblyName>
 		<RootNamespace>core.Extensions.Data</RootNamespace>
@@ -11,7 +11,7 @@
     <Copyright>© Massimo Di Paolo. All rights reserved.</Copyright>
     <Description></Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <PackageReleaseNotes>Query / Merge methods</PackageReleaseNotes>    
+    <PackageReleaseNotes>.net core 2.2</PackageReleaseNotes>    
     <PackageTags></PackageTags> 
   </PropertyGroup>
 	<ItemGroup>
