--- a/src/modules/Message/Message.csproj
+++ b/src/modules/Message/Message.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup> 
-    <TargetFramework>netcoreapp2.1</TargetFramework>
-    <PackageVersion>1.0.5</PackageVersion>  
+    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <PackageVersion>1.0.6</PackageVersion>  
     <PackageId>app.core.Extensions.Message</PackageId>
     <AssemblyName>app.core.Extensions.Message</AssemblyName>
     <RootNamespace>core.Extensions.Message</RootNamespace>
@@ -10,7 +10,7 @@
     <Copyright>© Massimo Di Paolo. All rights reserved.</Copyright>
     <Description>Send/Receive message via email</Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <PackageReleaseNotes>First release</PackageReleaseNotes>
+    <PackageReleaseNotes>.net core 2.2</PackageReleaseNotes>
     <PackageTags>extension message, email, smtp</PackageTags>    
   </PropertyGroup>
  
@@ -20,7 +20,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MailKit" Version="2.0.6" />
+    <PackageReference Include="MailKit" Version="2.1.2" />
   </ItemGroup>
 
   <ItemGroup>
