--- a/src/modules/StaticFiles/StaticFiles.csproj
+++ b/src/modules/StaticFiles/StaticFiles.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
-    <PackageVersion>1.0.5</PackageVersion>
+  <PropertyGroup> 
+    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <PackageVersion>1.0.6</PackageVersion>
     <PackageId>app.core.Extensions.StaticFiles</PackageId>
     <AssemblyName>app.core.Extensions.StaticFiles</AssemblyName>
     <RootNamespace>core.Extensions.StaticFiles</RootNamespace>
@@ -10,7 +10,7 @@
     <Copyright>© Massimo Di Paolo. All rights reserved.</Copyright>
     <Description>This extension enables the web app to serve static files. A physical file provider is used.</Description>    
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <PackageReleaseNotes>Enable absolute,shared network paths</PackageReleaseNotes>        
+    <PackageReleaseNotes>.netcore 2.2</PackageReleaseNotes>        
     <PackageTags>static files staticfiles </PackageTags>      
   </PropertyGroup>
 
@@ -20,8 +20,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.1.1" />
-    <PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="2.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
