--- a/src/core/core.csproj
+++ b/src/core/core.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   
-    <PropertyGroup>
+    <PropertyGroup>    
     <TargetFramework>netcoreapp2.2</TargetFramework>
-    <PackageVersion>1.1.9</PackageVersion>
+    <PackageVersion>1.1.10</PackageVersion>  
     <PackageId>app.core</PackageId>  
     <AssemblyName>app.core</AssemblyName>
     <RootNamespace>core</RootNamespace>
@@ -12,12 +12,12 @@
     <Copyright>© Massimo Di Paolo. All rights reserved.</Copyright>
     <Description>Base project for extandable .net core web application.</Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>      
-    <PackageReleaseNotes>.net core 2.2 </PackageReleaseNotes>    
+    <PackageReleaseNotes>IISIntegration 2.2.1 </PackageReleaseNotes>    
     <PackageTags></PackageTags>    
   </PropertyGroup>   
    
   <ItemGroup>    
-    <PackageReference Include="Microsoft.AspNetCore.Server.IISIntegration" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Server.IISIntegration" Version="2.2.1" />
     <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="2.2.0" />
