--- a/src/modules/Data.EF/Data.EF.csproj
+++ b/src/modules/Data.EF/Data.EF.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup> 
     <TargetFramework>netcoreapp2.2</TargetFramework>
-    <PackageVersion>1.0.8</PackageVersion> 
+    <PackageVersion>1.0.9</PackageVersion> 
     <PackageId>app.core.Extensions.Data.EF</PackageId>
     <AssemblyName>app.core.Extensions.Data.EF</AssemblyName>
     <RootNamespace>core.Extensions.Data.EF</RootNamespace>
@@ -10,8 +10,8 @@
     <Copyright>© Massimo Di Paolo. All rights reserved.</Copyright>
     <Description>DbContext and IRepository interface for EF-based extensions</Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <PackageReleaseNotes>.net core 2.2</PackageReleaseNotes>
-    <PackageTags>EF merge</PackageTags>
+    <PackageReleaseNotes>Fix nullable EF ignore/mapping options; EF 2.2.1</PackageReleaseNotes>
+    <PackageTags>EF data mapper</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
@@ -21,6 +21,6 @@
     <Folder Include="Repository\" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="2.2.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="2.2.1" />
   </ItemGroup>
 </Project>
