--- a/src/modules/Data.Mongo/Data.Mongo.csproj
+++ b/src/modules/Data.Mongo/Data.Mongo.csproj
@@ -2,7 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<TargetFramework>netcoreapp2.2</TargetFramework>
-		<PackageVersion>1.0.5</PackageVersion>
+		<PackageVersion>1.0.6</PackageVersion>
 		<PackageId>app.core.Extensions.Data.Mongo</PackageId>
 		<AssemblyName>app.core.Extensions.Data.Mongo</AssemblyName>
 		<RootNamespace>core.Extensions.Data.Mongo</RootNamespace>
@@ -10,7 +10,7 @@
     <Copyright>© Massimo Di Paolo. All rights reserved.</Copyright>
     <Description></Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <PackageReleaseNotes>.net core 2.2</PackageReleaseNotes>
+    <PackageReleaseNotes>Add Merge operation options (upsert / sync)</PackageReleaseNotes>
     <PackageTags></PackageTags>
   </PropertyGroup>
 	<ItemGroup>
