--- a/src/modules/Data.EF/Data.EF.csproj
+++ b/src/modules/Data.EF/Data.EF.csproj
@@ -2,15 +2,15 @@
 
   <PropertyGroup> 
     <TargetFramework>netcoreapp2.2</TargetFramework>
-    <PackageVersion>1.1.0</PackageVersion> 
-    <PackageId>app.core.Extensions.Data.EF</PackageId>
+    <PackageVersion>1.2.1</PackageVersion> 
+    <PackageId>app.core.Extensions.Data.EF</PackageId>   
     <AssemblyName>app.core.Extensions.Data.EF</AssemblyName>
     <RootNamespace>core.Extensions.Data.EF</RootNamespace>
     <Authors>Massimo Di Paolo</Authors>
     <Copyright>© Massimo Di Paolo. All rights reserved.</Copyright>
     <Description>DbContext and IRepository interface for EF-based extensions</Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <PackageReleaseNotes>Add Merge operation options (upsert / sync); Fix Merge</PackageReleaseNotes>
+    <PackageReleaseNotes>Using EFCore.BulkExtensions for Merge support</PackageReleaseNotes>
     <PackageTags>EF data mapper</PackageTags>
   </PropertyGroup>
 
@@ -21,6 +21,7 @@
     <Folder Include="Repository\" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="EFCore.BulkExtensions" Version="2.3.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="2.2.1" />
   </ItemGroup>
 </Project>
