--- a/src/modules/Identity/Identity.csproj
+++ b/src/modules/Identity/Identity.csproj
@@ -1,30 +1,25 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
-    <PackageVersion>1.0.0</PackageVersion>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <PackageVersion>0.0.1</PackageVersion>
     <PackageId>app.core.Extensions.Identity</PackageId>
     <AssemblyName>app.core.Extensions.Identity</AssemblyName>
-    <Authors>Massimo Di Paolo</Authors>
-    <Description>IdentityServer4 wrapper: OpenID Connect and OAuth 2.0 Framework for ASP.NET Core.</Description>
-    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <PackageReleaseNotes>First release</PackageReleaseNotes>
-    <Copyright>Copyright 2017 (c) Massimo Di Paolo. All rights reserved.</Copyright>
-    <PackageTags>Identity,OAuth2,OAuth,2.0,OpenID,Connect,IdentityServer,IdentityServer4,Security</PackageTags>
     <RootNamespace>core.Extensions.Identity</RootNamespace>
-  </PropertyGroup>
-
-  <PropertyGroup>
-    <NoWarn>1701;1702;1705;1591</NoWarn>
-    <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
+    <Authors>Massimo Di Paolo</Authors>
+    <Copyright>© Massimo Di Paolo. All rights reserved.</Copyright>
+    <Description></Description>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <PackageReleaseNotes></PackageReleaseNotes>
+    <PackageTags>IdentityServer wrapper</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="IdentityServer4" Version="2.1.0" />
+    <PackageReference Include="IdentityServer4" Version="2.3.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ExtensionBase\ExtensionBase.csproj" />
   </ItemGroup>
-  
+
 </Project>
