--- a/src/modules/Message/Message.csproj
+++ b/src/modules/Message/Message.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup> 
     <TargetFramework>netcoreapp2.2</TargetFramework>
-    <PackageVersion>1.0.7</PackageVersion>     
+    <PackageVersion>1.0.9</PackageVersion>     
     <PackageId>app.core.Extensions.Message</PackageId>
     <AssemblyName>app.core.Extensions.Message</AssemblyName>
     <RootNamespace>core.Extensions.Message</RootNamespace>
@@ -10,7 +10,7 @@
     <Copyright>© Massimo Di Paolo. All rights reserved.</Copyright>
     <Description>Send/Receive message via email</Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <PackageReleaseNotes>Trust server certificate on ssl handshake error</PackageReleaseNotes>
+    <PackageReleaseNotes>Ssl options</PackageReleaseNotes>
     <PackageTags>extension message, email, smtp</PackageTags>    
   </PropertyGroup>
  
@@ -25,6 +25,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ExtensionBase\ExtensionBase.csproj" />
-  </ItemGroup>
+  </ItemGroup>    
 
 </Project>
