--- a/src/modules/Data.EF/Data.EF.csproj
+++ b/src/modules/Data.EF/Data.EF.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup> 
     <TargetFramework>netcoreapp2.2</TargetFramework>
-    <PackageVersion>1.2.3</PackageVersion> 
+    <PackageVersion>1.2.4</PackageVersion> 
     <PackageId>app.core.Extensions.Data.EF</PackageId>   
     <AssemblyName>app.core.Extensions.Data.EF</AssemblyName>
     <RootNamespace>core.Extensions.Data.EF</RootNamespace>
@@ -10,7 +10,7 @@
     <Copyright>© Massimo Di Paolo. All rights reserved.</Copyright>
     <Description>DbContext and IRepository interface for EF-based extensions</Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <PackageReleaseNotes>EF map entity with namespace</PackageReleaseNotes>
+    <PackageReleaseNotes>https://github.com/massimodipaolo/app-core/issues/1</PackageReleaseNotes>
     <PackageTags>EF data mapper</PackageTags>
   </PropertyGroup>
 
@@ -21,7 +21,6 @@
     <Folder Include="Repository\" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="EFCore.BulkExtensions" Version="2.3.7" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="2.2.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="2.2.2" />
   </ItemGroup>
 </Project>
