--- a/src/modules/Data.EF/Data.EF.csproj
+++ b/src/modules/Data.EF/Data.EF.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup> 
     <TargetFramework>netcoreapp2.2</TargetFramework>
-    <PackageVersion>1.2.6</PackageVersion> 
+    <PackageVersion>1.2.7</PackageVersion> 
     <PackageId>app.core.Extensions.Data.EF</PackageId>   
     <AssemblyName>app.core.Extensions.Data.EF</AssemblyName>
     <RootNamespace>core.Extensions.Data.EF</RootNamespace>
@@ -10,7 +10,7 @@
     <Copyright>© Massimo Di Paolo. All rights reserved.</Copyright>
     <Description>DbContext and IRepository interface for EF-based extensions</Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <PackageReleaseNotes>Load main/inner navigation properties</PackageReleaseNotes>
+    <PackageReleaseNotes>Custom rules for inner navigation properties</PackageReleaseNotes>
     <PackageTags>EF data mapper</PackageTags>
   </PropertyGroup>
 
