--- a/src/modules/Data.FileSystem/Data.FileSystem.csproj
+++ b/src/modules/Data.FileSystem/Data.FileSystem.csproj
@@ -2,9 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
-    <PackageVersion>1.0.0</PackageVersion>
+    <PackageVersion>1.0.1</PackageVersion> 
     <PackageId>Ws.Core.Extensions.Data.FileSystem</PackageId>
-    <AssemblyName>WS.Core.Extensions.Data.FileSystem</AssemblyName>
+    <AssemblyName>Ws.Core.Extensions.Data.FileSystem</AssemblyName>
     <RootNamespace>Ws.Core.Extensions.Data.FileSystem</RootNamespace>
     <Authors>Massimo Di Paolo</Authors>
     <Copyright>© Massimo Di Paolo. All rights reserved.</Copyright>
@@ -12,20 +12,21 @@
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageReleaseNotes>Add Merge operation options (upsert / sync)</PackageReleaseNotes>
     <PackageTags></PackageTags>
-  </PropertyGroup>
+  </PropertyGroup> 
 
-  <PropertyGroup>
+  <PropertyGroup> 
     <NoWarn>1701;1702;1705;1591</NoWarn>
-    <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
-
-  </PropertyGroup>  
+    <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>        
+  </PropertyGroup>   
+  
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Data\Data.csproj" /> 
-    <ProjectReference Include="..\ExtensionBase\ExtensionBase.csproj" />
+    <ProjectReference Include="..\Data\Data.csproj" />
   </ItemGroup>
+
+  <Import Project="..\..\shared\Serialization\Serialization.projitems" Label="Shared" />
 
 </Project>
