--- a/src/modules/Spa/Spa.csproj
+++ b/src/modules/Spa/Spa.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup> 
     <TargetFramework>netcoreapp2.2</TargetFramework>
-    <PackageVersion>1.0.0</PackageVersion> 
+    <PackageVersion>1.0.1</PackageVersion> 
     <PackageId>Ws.Core.Extensions.Spa</PackageId>
     <AssemblyName>Ws.Core.Extensions.Spa</AssemblyName> 
     <RootNamespace>Ws.Core.Extensions.Spa</RootNamespace>
@@ -25,8 +25,9 @@
 
   <ItemGroup>    
     <ProjectReference Include="..\ExtensionBase\ExtensionBase.csproj" />
-    <ProjectReference Include="..\Data.Cache\Data.Cache.csproj" />
-    <ProjectReference Include="..\StaticFiles\StaticFiles.csproj" />  
-  </ItemGroup>
+    <ProjectReference Include="..\Data.Cache\Data.Cache.csproj" />  
+  </ItemGroup>  
+
+  <Import Project="..\..\shared\StaticFilesFolder\StaticFilesFolder.projitems" Label="Shared" />
 
 </Project>
