Add base/common controllers to Api; Init sample web

--- a/samples/web/Properties/launchSettings.json
+++ b/samples/web/Properties/launchSettings.json
@@ -9,28 +9,31 @@
   },
   "profiles": {
     "IIS Express": {
+      "commandName": "IISExpress",
+      "launchBrowser": true,
+      "launchUrl": "api/diagnostic",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Local"
+      },
+      "applicationUrl": "http://localhost:32040"
+    },
+    "dev": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "api/diagnostic",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "http://localhost:32040"
     },
-    "dev": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "launchUrl": "http://localhost:5000",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
     "prod": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "http://localhost:5000",
+      "launchUrl": "api/diagnostic",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Production"
-      }
+      },
+      "applicationUrl": "http://localhost:32040"
     }
   }
 }
