--- a/samples/web/web.csproj
+++ b/samples/web/web.csproj
@@ -1,39 +1,34 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
-    <AssetTargetFallback>portable-net45+win8</AssetTargetFallback>    
-    <UserSecretsId>app.samples.web</UserSecretsId>
+    <RootNamespace>web</RootNamespace>
   </PropertyGroup>
   <PropertyGroup>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
     <NoWarn>1701;1702;1591</NoWarn>
   </PropertyGroup>
   <ItemGroup>
-    <Content Remove="NLog.config" />
+    <Compile Remove="wwwroot\folder\**" />
+    <Content Remove="wwwroot\folder\**" />
+    <EmbeddedResource Remove="wwwroot\folder\**" />
+    <None Remove="wwwroot\folder\**" />
   </ItemGroup>  
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="NLog.Config" Version="4.6.2" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="4.8.1" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\src\core.NLog\core.NLog.csproj" />
+    <ProjectReference Include="..\..\src\core\core.csproj" />
     <ProjectReference Include="..\..\src\modules\Api\Api.csproj" />
-    <ProjectReference Include="..\..\src\modules\Message\Message.csproj" />
-    <ProjectReference Include="..\..\src\modules\StaticFiles\StaticFiles.csproj" />
-    <ProjectReference Include="..\..\src\modules\Data.Cache\Data.Cache.csproj" />
-    <ProjectReference Include="..\..\src\modules\Data\Data.csproj" />
-    <ProjectReference Include="..\..\src\modules\Data.FileSystem\Data.FileSystem.csproj" />
-    <ProjectReference Include="..\..\src\modules\ExtensionBase\ExtensionBase.csproj" />
-    <ProjectReference Include="..\..\src\modules\Data.Mongo\Data.Mongo.csproj" />
-    <ProjectReference Include="..\..\src\modules\Data.EF.MySql\Data.EF.MySql.csproj" />
     <ProjectReference Include="..\..\src\modules\Data.EF.SqlServer\Data.EF.SqlServer.csproj" />
+    <ProjectReference Include="..\..\src\modules\StaticFiles\StaticFiles.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="wwwroot\folder\" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="NLog.config">
-      <PackagePath></PackagePath>
-      <Pack>true</Pack>
-    </None>
+    <Content Update="Files\**\*.*" CopyToPublishDirectory="Never" />
+    <Content Update="NLog.config">
+      <CopyToPublishDirectory>Always</CopyToPublishDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 </Project>
